--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,16 @@ data/models/*.safetensors
 *.sqlite
 *.sqlite3
 
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
+
 # Logs
 *.log
 logs/
