--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,9 @@ uvicorn[standard]==0.24.0
 
 # 数据库
 sqlalchemy==2.0.23
-sqlite3
-
-# NLP和AI模型
-spacy==3.7.2
-transformers==4.35.2
-torch==2.1.1
-sentence-transformers==2.2.2
-
-# PDF处理
-PyMuPDF==1.23.8
-pdfplumber==0.10.3
-
-# 网页爬虫
-selenium==4.15.2
-beautifulsoup4==4.12.2
-requests==2.31.0
+alembic==1.12.1
+pymysql==1.1.0
+cryptography==41.0.7
 
 # 数据处理
 pandas==2.1.3
@@ -28,7 +15,7 @@ pydantic==2.5.0
 
 # 工具库
 python-multipart==0.0.6
-python-dotenv==1.0.0
+python-dotenv>=0.13.0
 loguru==0.7.2
 
 # 开发工具
@@ -36,6 +23,3 @@ pytest==7.4.3
 black==23.11.0
 flake8==6.1.0
 mypy==1.7.1
-
-# 桌面应用
-electron-builder==24.6.4
