--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,16 @@ python-multipart==0.0.6
 python-dotenv>=0.13.0
 loguru==0.7.2
 
+# Web scraping and PDF processing
+beautifulsoup4==4.12.2
+requests==2.31.0
+selenium==4.15.2
+lxml==4.9.3
+PyMuPDF==1.23.8
+pdfplumber==0.10.3
+PyPDF2==3.0.1
+webdriver-manager==4.0.1
+
 # 开发工具
 pytest==7.4.3
 black==23.11.0
